profilelist1exp/unpackaged/objects/Social_Media__c.object
<CustomObject>
    <description>To store social media related records</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FAP Social Media</relationshipLabel>
        <relationshipName>Social_Medias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GooglePlus__c</fullName>
        <label>Google+</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Habrahabr__c</fullName>
        <label>Habrahabr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MicroBlog__c</fullName>
        <label>MicroBlog</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipName>FAP_Social_Media_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Facebook__c</fullName>
        <label>Test_Facebook</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud</fullName>
                </value>
                <value>
                    <fullName>Data Protection Services (Advisor Deployment)</fullName>
                </value>
                <value>
                    <fullName>Storage Services (PS Series Deployment)</fullName>
                </value>
                <value>
                    <fullName>Campus Deployment</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vkontakte__c</fullName>
        <label>Vkontakte</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeChat__c</fullName>
        <label>WeChat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FAP Social Media</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{0000000}</displayFormat>
        <label>FAP Social Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAP Social Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>